fix delivery item word wrap; fix invoice mobile description; fix tax message for product;

--- a/themes/default/assets/css/section-header.css
+++ b/themes/default/assets/css/section-header.css
@@ -98,6 +98,12 @@
   width: 100%;
 }
 
+@media (max-width: 768px) {
+  .sellix-header-shop-name {
+    white-space: nowrap;
+  }
+}
+
 .sellix-header-cart {
   z-index: 12;
   margin-top: -1px;
